@@ -1,84 +1,30 @@
-# Generated by jeweler
-# DO NOT EDIT THIS FILE DIRECTLY
-# Instead, edit Jeweler::Tasks in Rakefile, and run the gemspec command
 # -*- encoding: utf-8 -*-
+require 'rubygems' unless defined? Gem
 
 Gem::Specification.new do |s|
   s.name = %q{irbtools}
-  s.version = "0.8.2"
+  s.version = File.read('VERSION').chomp
 
-  s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Jan Lelis"]
-  s.date = %q{2010-11-17}
+  s.date = %q{2010-12-14}
+  s.summary = %q{irbtools is a meta gem which installs some useful irb gems and configures your irb.}
   s.description = %q{irbtools is a meta gem which installs some useful irb gems and configures your irb. Simply put a require 'irbtools' in the .irbrc file in your home directory.}
   s.email = %q{mail@janlelis.de}
-  s.extra_rdoc_files = [
-    "LICENSE",
-     "README.rdoc"
-  ]
-  s.files = [
-     ".gitignore",
-     "CHANGELOG",
-     "LICENSE",
-     "README.rdoc",
-     "Rakefile",
-     "VERSION",
-     "irbtools.gemspec",
-     "lib/irbtools.rb",
-     "lib/irbtools/configure.rb",
-     "lib/irbtools/general.rb",
-     "lib/irbtools/libraries.rb",
-  ]
+  s.extra_rdoc_files = %w[ LICENSE README.rdoc]
+  s.files = Dir.glob(%w[lib/**/*.rb ]) + %w{VERSION CHANGELOG Rakefile irbtools.gemspec}
   s.homepage = %q{http://github.com/janlelis/irbtools}
-  s.rdoc_options = ["--charset=UTF-8"]
-  s.require_paths = ["lib"]
   s.rubygems_version = %q{1.3.7}
-  s.summary = %q{irbtools is a meta gem which installs some useful irb gems and configures your irb.}
 
-  if s.respond_to? :specification_version then
-    current_version = Gem::Specification::CURRENT_SPECIFICATION_VERSION
-    s.specification_version = 3
-
-    if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<fancy_irb>, [">= 0.6.2"])
-      s.add_runtime_dependency(%q<zucker>, [">= 8"])
-      s.add_runtime_dependency(%q<hirb>, ["~> 0.3"])
-      s.add_runtime_dependency(%q<awesome_print>, ["~> 0.3"])
-      s.add_runtime_dependency(%q<clipboard>, ["~> 0.9"])
-      s.add_runtime_dependency(%q<coderay>, ["~> 0.9"])
-      s.add_runtime_dependency(%q<boson>, ["~> 0.3"])
-      s.add_runtime_dependency(%q<wirble>, [">= 0"])
-      s.add_runtime_dependency(%q<g>, [">= 0"])
-      s.add_runtime_dependency(%q<guessmethod>, [">= 0"])
-      s.add_runtime_dependency(%q<interactive_editor>, [">= 0"])
-      s.add_runtime_dependency(%q<sketches>, [">= 0"])
-    else
-      s.add_dependency(%q<fancy_irb>, [">= 0.6.2"])
-      s.add_dependency(%q<zucker>, [">= 8"])
-      s.add_dependency(%q<hirb>, ["~> 0.3"])
-      s.add_dependency(%q<awesome_print>, ["~> 0.3"])
-      s.add_dependency(%q<clipboard>, ["~> 0.9"])
-      s.add_dependency(%q<coderay>, ["~> 0.9"])
-      s.add_dependency(%q<boson>, ["~> 0.3"])
-      s.add_dependency(%q<wirble>, [">= 0"])
-      s.add_dependency(%q<g>, [">= 0"])
-      s.add_dependency(%q<guessmethod>, [">= 0"])
-      s.add_dependency(%q<interactive_editor>, [">= 0"])
-      s.add_dependency(%q<sketches>, [">= 0"])
-    end
-  else
-    s.add_dependency(%q<fancy_irb>, [">= 0.6.2"])
-    s.add_dependency(%q<zucker>, [">= 8"])
-    s.add_dependency(%q<hirb>, ["~> 0.3"])
-    s.add_dependency(%q<awesome_print>, ["~> 0.3"])
-    s.add_dependency(%q<clipboard>, ["~> 0.9"])
-    s.add_dependency(%q<coderay>, ["~> 0.9"])
-    s.add_dependency(%q<boson>, ["~> 0.3"])
-    s.add_dependency(%q<wirble>, [">= 0"])
-    s.add_dependency(%q<g>, [">= 0"])
-    s.add_dependency(%q<guessmethod>, [">= 0"])
-    s.add_dependency(%q<interactive_editor>, [">= 0"])
-    s.add_dependency(%q<sketches>, [">= 0"])
-  end
+  s.add_dependency %q<fancy_irb>,     ">= 0.6.2"
+  s.add_dependency %q<zucker>,        ">= 8"
+  s.add_dependency %q<hirb>,          "~> 0.3"
+  s.add_dependency %q<awesome_print>, "~> 0.3"
+  s.add_dependency %q<clipboard>,     "~> 0.9"
+  s.add_dependency %q<coderay>,       "~> 0.9"
+  s.add_dependency %q<boson>,         "~> 0.3"
+  s.add_dependency %q<wirble>,        ">= 0"
+  s.add_dependency %q<g>,             ">= 0"
+  s.add_dependency %q<guessmethod>,   ">= 0"
+  s.add_dependency %q<interactive_editor>, ">= 0"
+  s.add_dependency %q<sketches>,      ">= 0"
 end
-
